--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "name": "recruitment-dev-react-multicheck-homework-wenhuilv",
+  "private": true,
   "scripts": {
     "dev": "webpack-dev-server --open",
     "test": "jest",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint src/**"
   },
   "dependencies": {
     "jest": "25.1.0",
@@ -14,7 +17,12 @@
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "css-loader": "3.2.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "3.2.0",
     "prettier": "^2.2.1",
     "source-map-loader": "0.2.4",
