--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "webpack-dev-server --open",
     "test": "jest",
+    "test:w": "jest --watch",
     "format": "prettier --write .",
     "lint": "eslint src/**"
   },
@@ -14,13 +15,17 @@
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@types/jest": "25.1.1",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.22",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "babel-jest": "^26.6.3",
     "css-loader": "3.2.0",
     "eslint": "^7.24.0",
     "eslint-plugin-react": "^7.23.2",
