--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "jest": "25.1.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "uniqid": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/react-hooks": "^5.1.1",
     "@types/jest": "^26.0.22",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
@@ -32,6 +35,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "3.2.0",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^16.9.0",
     "source-map-loader": "0.2.4",
     "style-loader": "1.0.0",
     "ts-loader": "6.0.4",
