--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "test:w": "jest --watch",
     "format": "prettier --write .",
-    "lint": "eslint src/**"
+    "lint": "eslint src/**/*.{ts,js}"
   },
   "dependencies": {
     "jest": "25.1.0",
