--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/react-hooks": "^5.1.1",
+    "@testing-library/user-event": "^13.1.4",
     "@types/jest": "^26.0.22",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
