--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "test:w": "jest --watch",
     "format": "prettier --write .",
-    "lint": "eslint src/**/*.{ts,js}"
+    "lint": "eslint --ext .ts,tsx src/"
   },
   "dependencies": {
     "jest": "25.1.0",
@@ -34,8 +34,10 @@
     "babel-jest": "^26.6.3",
     "css-loader": "3.2.0",
     "eslint": "^7.24.0",
+    "eslint-plugin-jest-dom": "^3.8.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^4.1.0",
     "html-webpack-plugin": "3.2.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "^16.9.0",
