--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "styled-components": "^5.2.3",
-    "uniqid": "^5.3.0"
+    "uniqid": "^5.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
@@ -29,6 +30,7 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/styled-components": "^5.1.9",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-jest": "^26.6.3",
