--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint --ext .ts,tsx src/"
   },
   "dependencies": {
-    "jest": "25.1.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
+    "jest": "^25.1.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "styled-components": "^5.2.3",
     "uniqid": "^5.3.0",
     "uuid": "^8.3.2"
@@ -26,29 +26,29 @@
     "@testing-library/react-hooks": "^5.1.1",
     "@testing-library/user-event": "^13.1.4",
     "@types/jest": "^26.0.22",
-    "@types/node": "12.7.2",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-jest": "^26.6.3",
-    "css-loader": "3.2.0",
+    "css-loader": "^3.2.0",
     "eslint": "^7.24.0",
     "eslint-plugin-jest-dom": "^3.8.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.1.0",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "^16.9.0",
-    "source-map-loader": "0.2.4",
-    "style-loader": "1.0.0",
-    "ts-loader": "6.0.4",
-    "typescript": "3.8.3",
-    "webpack": "4.39.3",
-    "webpack-cli": "3.3.7",
-    "webpack-dev-server": "3.8.0"
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.8.3",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   }
 }
