--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "webpack-dev-server",
     "test": "jest",
     "test:w": "jest --watch",
+    "test:coverage": "jest --coverage",
     "format": "prettier --write .",
     "lint": "eslint --ext .ts,tsx src/"
   },
