--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "recruitment-dev-react-multicheck-homework-wenhuilv",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "dev": "webpack-dev-server",
     "test": "jest",
